直ってなかったからHTMLも更新

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
         <p id="lottery7"></p>
         <p id="notification7"></p>
     </div>
+
+<div id="reverse-result">
+    <h2>本日予約できる最大の来場日：</h2>
+    <p id="max-2month"></p>
+    <p id="max-7day"></p>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
