--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <h1>万博予約日計算ツール</h1>
-    <label for="visit-date">来場日を選んでください:</label>
+    <label for="visit-date">日付を選んでください:</label>
     <input type="date" id="visit-date">
     <div id="result">
-        <h2>結果：</h2>
+        <h2>この日に来場するなら</h2>
         <p id="lottery2"></p>
         <p id="lottery7"></p>
         <p id="notification7"></p>
-        <h2>本日予約できる最大の来場日：</h2>
+        <h2>この日に予約するなら</h2>
         <p id="max-2month"></p>
         <p id="max-7day"></p>
     </div>
