--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>万博予約日計算ツール</h1>
     <label for="visit-date">日付を選んでください:</label>
     <input type="date" id="visit-date">
+    <button id="recalculate">もう一回計算する！</button>
     <div id="result">
         <h2>この日に来場するなら</h2>
         <p id="lottery2"></p>
